--- a/DeeZNNutz.com/zip-0001.md
+++ b/DeeZNNutz.com/zip-0001.md
@@ -1,6 +1,6 @@
 | Field | Description |
 | ----- | ----------- |
-| ZIP | - |
+| ZIP | 0001 |
 | Title | Configurable Node Discovery and Static Nodes |
 | Author | @0x3639 |
 | Status | DRAFT |
