--- a/DeeZNNutz.com/zip-0001.md
+++ b/DeeZNNutz.com/zip-0001.md
@@ -1,7 +1,7 @@
 | Field | Description |
 | ----- | ----------- |
 | ZIP | 0001 |
-| Title | Configurable Node Discovery and Static Nodes |
+| Title | Configurable Node Discovery and Static/Trusted Nodes |
 | Author | @0x3639 |
 | Status | DRAFT |
 | Type | Protocol |
@@ -19,28 +19,28 @@
 
 # Abstract
 
-This ZIP proposes making node discovery and static node configuration configurable through the node's `config.json` file. Currently, these settings are hardcoded in the node implementation, with discovery always enabled and no static nodes configured. The proposal adds new configuration options to allow users to control these settings, providing more flexibility in how nodes connect to the network.
+This ZIP proposes making node discovery, static nodes, and trusted nodes configurable through the node's `config.json` file. Currently, these settings are partially implemented in the node configuration, with discovery defaulting to true and support for static and trusted nodes. The proposal formalizes these configuration options and ensures they are properly utilized throughout the codebase.
 
 # Motivation
 
-The current implementation is unable to set discoverability and static nodes in the `config.json` file:
+The current implementation has several limitations:
 
-1. Node discovery is always enabled, which may not be desirable in all network configurations
-2. Static nodes cannot be configured, forcing nodes to rely solely on discovery
-3. Users have limited control over their node's connection strategy
-4. Network operators cannot enforce specific node connections
+1. Node discovery configuration exists but needs formalization
+2. Static nodes can be configured but need proper documentation
+3. Trusted nodes are supported in the configuration but not fully utilized
+4. Users need more clarity about default values and behavior
 
-This ZIP aims to solve these issues by making these settings configurable, allowing for:
-- More flexible network topologies
-- Better control over node connections
-- Improved network security through controlled peer connections
-- Support for private networks with specific node requirements
+This ZIP aims to solve these issues by:
+- Formalizing the configuration options
+- Properly implementing trusted nodes support
+- Documenting default values and behaviors
+- Ensuring consistent handling of all node connection types
 
 # Specification
 
 ## Configuration Structure
 
-The following fields are added to the `Net` section of `config.json`:
+The following fields are available in the `Net` section of `config.json`:
 
 ```json
 {
@@ -50,9 +50,11 @@ The following fields are added to the `Net` section of `config.json`:
         "MaxPeers": 60,
         "MinConnectedPeers": 16,
         "MaxPendingPeers": 10,
-        "Discovery": true, //added field
-        "StaticNodes": [ //added field
-            "enode://<node-id>@<ip>:<port>",
+        "Discovery": true,
+        "StaticNodes": [
+            "enode://<node-id>@<ip>:<port>"
+        ],
+        "TrustedNodes": [
             "enode://<node-id>@<ip>:<port>"
         ],
         "Seeders": [
@@ -66,12 +68,29 @@ The following fields are added to the `Net` section of `config.json`:
 
 | Field | Type | Default | Description |
 | ----- | ---- | ------- | ----------- |
-| Discovery | boolean | true | Whether to enable node discovery |
-| StaticNodes | []string | [] | List of static nodes to maintain connections with |
+| Discovery | boolean | true | Controls the peer discovery mechanism |
+| StaticNodes | []string | [] | List of nodes to maintain persistent connections with |
+| TrustedNodes | []string | [] | List of privileged nodes that can exceed peer limits |
+
+## Default Values
+
+Default values are defined in the p2p package:
+
+```go
+const (
+    DefaultDiscovery = true
+    DefaultListenHost = "0.0.0.0"
+    DefaultListenPort = 35995
+    DefaultMinPeers = 8
+    DefaultMaxPeers = 60
+    DefaultMaxPendingPeers = 10
+    DefaultMinConnectedPeers = 16
+)
+```
 
 ## Node URL Format
 
-Static nodes must be specified using the enode URL format:
+All node URLs (static, trusted, and seeders) must use the enode format:
 ```
 enode://<node-id>@<ip>:<port>
 ```
@@ -79,95 +98,77 @@ enode://<node-id>@<ip>:<port>
 Where:
 - `<node-id>` is the 64-byte public key of the node
 - `<ip>` is the IP address of the node
-- `<port>` is the TCP port the node is listening on
+- `<port>` is the TCP port number
 
 ## Implementation Details
 
-### 1. NetConfig Structure Update
+### 1. Default Configuration
 
-The `NetConfig` structure in `node/config.go` is updated to include the new fields:
+The default configuration is set in `node/defaults.go`:
 
 ```go
-type NetConfig struct {
-    ListenHost string
-    ListenPort int
-
-    MinPeers          int
-    MinConnectedPeers int
-    MaxPeers          int
-    MaxPendingPeers   int
-
-    Discovery    bool     // New field
-    StaticNodes  []string // New field
-    Seeders      []string
+var DefaultNodeConfig = Config{
+    Net: NetConfig{
+        ListenHost:        p2p.DefaultListenHost,
+        ListenPort:        p2p.DefaultListenPort,
+        MinPeers:          p2p.DefaultMinPeers,
+        MinConnectedPeers: p2p.DefaultMinConnectedPeers,
+        MaxPeers:          p2p.DefaultMaxPeers,
+        MaxPendingPeers:   p2p.DefaultMaxPendingPeers,
+        Discovery:         p2p.DefaultDiscovery,
+        Seeders:           p2p.DefaultSeeders,
+    },
 }
 ```
 
-### 2. Server Configuration
+### 2. Node Configuration
 
-The `makeNetConfig` function in `node/config.go` is updated to include the new fields:
+The `Net` configuration structure in `p2p/config.go`:
 
 ```go
-func (c *Config) makeNetConfig() *p2p.Net {
-    networkDataDir := filepath.Join(c.DataPath, p2p.DefaultNetDirName)
-    privateKeyFile := filepath.Join(c.DataPath, p2p.DefaultNetPrivateKeyFile)
-
-    return &p2p.Net{
-        PrivateKeyFile:    privateKeyFile,
-        MaxPeers:          c.Net.MaxPeers,
-        MaxPendingPeers:   c.Net.MaxPendingPeers,
-        MinConnectedPeers: c.Net.MinConnectedPeers,
-        Name:              fmt.Sprintf("%v %v", metadata.Version, c.Name),
-        Discovery:         c.Net.Discovery,    // New field
-        StaticNodes:       c.Net.StaticNodes,  // New field
-        Seeders:           c.Net.Seeders,
-        NodeDatabase:      networkDataDir,
-        ListenAddr:        c.Net.ListenHost,
-        ListenPort:        c.Net.ListenPort,
-    }
+type Net struct {
+    privateKey *ecdsa.PrivateKey
+    PrivateKeyFile string
+    MaxPeers int
+    MinConnectedPeers int
+    MaxPendingPeers int
+    Name string
+    NoDial bool
+    Seeders []string
+    NodeDatabase string
+    ListenAddr string
+    ListenPort int
+    Discovery bool
+    StaticNodes []string
+    TrustedNodes []string
 }
 ```
 
 ### 3. Node Initialization
 
-The node initialization in `node/node.go` is updated to parse and use static nodes:
+Node initialization in `node/node.go` handles both static and trusted nodes:
 
 ```go
 func NewNode(conf *Config) (*Node, error) {
-    // ... existing code ...
-
     netConfig := conf.makeNetConfig()
-    nodes, err := netConfig.Nodes()
-    if err != nil {
-        return nil, errors.Errorf("Unable to parse seeders. Reason: %v", err)
-    }
-
+    
     // Parse static nodes
-    var staticNodes []*discover.Node
-    if len(netConfig.StaticNodes) > 0 {
-        staticNodes = make([]*discover.Node, len(netConfig.StaticNodes))
-        for i, nodeStr := range netConfig.StaticNodes {
-            staticNodes[i], err = discover.ParseNode(nodeStr)
-            if err != nil {
-                return nil, errors.Errorf("Unable to parse static node %s. Reason: %v", nodeStr, err)
-            }
-        }
+    staticNodes, err := parseNodes(netConfig.StaticNodes)
+    if err != nil {
+        return nil, err
     }
-
+    
+    // Parse trusted nodes
+    trustedNodes, err := parseNodes(netConfig.TrustedNodes)
+    if err != nil {
+        return nil, err
+    }
+    
     node.server = &p2p.Server{
-        PrivateKey:        netConfig.PrivateKey(),
-        Name:              netConfig.Name,
-        MaxPeers:          netConfig.MaxPeers,
-        MinConnectedPeers: netConfig.MinConnectedPeers,
-        MaxPendingPeers:   netConfig.MaxPendingPeers,
-        Discovery:         netConfig.Discovery,    // Use config value
-        NoDial:            false,
-        StaticNodes:       staticNodes,           // Use parsed static nodes
-        BootstrapNodes:    nodes,
-        TrustedNodes:      nil,
-        NodeDatabase:      netConfig.NodeDatabase,
-        ListenAddr:        fmt.Sprintf("%v:%v", netConfig.ListenAddr, netConfig.ListenPort),
-        Protocols:         node.z.Protocol().SubProtocols,
+        Discovery:         netConfig.Discovery,
+        StaticNodes:       staticNodes,
+        TrustedNodes:      trustedNodes,
+        // ... other fields ...
     }
     return node, nil
 }
@@ -177,27 +178,31 @@ func NewNode(conf *Config) (*Node, error) {
 
 ### Discovery Configuration
 
-Making discovery configurable allows users to:
-- Run nodes in private networks without discovery
-- Reduce network traffic by disabling discovery when not needed
-- Improve security by controlling how nodes find peers
+The default value of `true` for Discovery:
+- Ensures out-of-the-box functionality for most users
+- Maintains backward compatibility
+- Can be disabled when needed for private networks
 
-### Static Nodes
+### Static and Trusted Nodes
 
-Static nodes provide:
-- Guaranteed connections to specific nodes
-- Support for private networks with known peers
-- Better control over network topology
-- Improved reliability in specific network configurations
+Supporting both types of special nodes:
+- Provides flexibility in network topology
+- Allows for privileged connections (trusted nodes)
+- Supports both public and private network configurations
 
 ### Implementation Approach
 
-The implementation leverages existing node parsing functionality that's already used for seeders, ensuring:
-- Consistent node URL parsing
-- Proven and tested code paths
-- Minimal new code required
-- Easy maintenance
+The implementation:
+- Uses centralized defaults in the p2p package
+- Provides consistent parsing for all node types
+- Maintains backward compatibility
+- Follows existing code patterns
 
 # Reference Implementation
 
-The reference implementation is provided in the code snippets above. The changes are minimal and leverage existing functionality, making them easy to implement and maintain.
+The reference implementation is available in:
+- `p2p/config.go`: Default values and configuration structures
+- `node/defaults.go`: Default node configuration
+- `node/node.go`: Node initialization and configuration handling
+
+The changes maintain backward compatibility while adding new functionality in a clean and maintainable way.
