--- a/DeeZNNutz.com/zip-0001.md
+++ b/DeeZNNutz.com/zip-0001.md
@@ -19,7 +19,7 @@
 
 # Abstract
 
-This ZIP proposes making node discovery, static nodes, and trusted nodes configurable through the node's `config.json` file. Currently, these settings are partially implemented in the node configuration, with discovery defaulting to true and support for static and trusted nodes. The proposal formalizes these configuration options and ensures they are properly utilized throughout the codebase.
+This ZIP proposes making node discovery, static nodes, trusted nodes, and connection behavior configurable through the node's `config.json` file. The proposal formalizes these configuration options, ensures they are properly utilized throughout the codebase, and introduces explicit default values for all network-related settings.
 
 # Motivation
 
@@ -28,13 +28,16 @@ The current implementation has several limitations:
 1. Node discovery configuration exists but needs formalization
 2. Static nodes can be configured but need proper documentation
 3. Trusted nodes are supported in the configuration but not fully utilized
-4. Users need more clarity about default values and behavior
+4. Connection behavior settings lack explicit defaults
+5. Users need more clarity about default values and behavior
 
 This ZIP aims to solve these issues by:
-- Formalizing the configuration options
+- Formalizing all network configuration options
 - Properly implementing trusted nodes support
 - Documenting default values and behaviors
 - Ensuring consistent handling of all node connection types
+- Centralizing default values in the p2p package
+- Adding explicit control over connection behavior
 
 # Specification
 
@@ -51,6 +54,7 @@ The following fields are available in the `Net` section of `config.json`:
         "MinConnectedPeers": 16,
         "MaxPendingPeers": 10,
         "Discovery": true,
+        "NoDial": false,
         "StaticNodes": [
             "enode://<node-id>@<ip>:<port>"
         ],
@@ -69,8 +73,14 @@ The following fields are available in the `Net` section of `config.json`:
 | Field | Type | Default | Description |
 | ----- | ---- | ------- | ----------- |
 | Discovery | boolean | true | Controls the peer discovery mechanism |
+| NoDial | boolean | false | If true, the node will not initiate connections to peers |
 | StaticNodes | []string | [] | List of nodes to maintain persistent connections with |
 | TrustedNodes | []string | [] | List of privileged nodes that can exceed peer limits |
+| ListenHost | string | "0.0.0.0" | IP address to listen on |
+| ListenPort | int | 35995 | Port number to listen on |
+| MaxPeers | int | 60 | Maximum number of connected peers |
+| MinConnectedPeers | int | 16 | Minimum number of connected peers before seeking more |
+| MaxPendingPeers | int | 10 | Maximum number of pending peer connections |
 
 ## Default Values
 
@@ -79,6 +89,7 @@ Default values are defined in the p2p package:
 ```go
 const (
     DefaultDiscovery = true
+    DefaultNoDial = false
     DefaultListenHost = "0.0.0.0"
     DefaultListenPort = 35995
     DefaultMinPeers = 8
@@ -116,6 +127,7 @@ var DefaultNodeConfig = Config{
         MaxPeers:          p2p.DefaultMaxPeers,
         MaxPendingPeers:   p2p.DefaultMaxPendingPeers,
         Discovery:         p2p.DefaultDiscovery,
+        NoDial:           p2p.DefaultNoDial,
         Seeders:           p2p.DefaultSeeders,
     },
 }
@@ -165,9 +177,10 @@ func NewNode(conf *Config) (*Node, error) {
     }
     
     node.server = &p2p.Server{
-        Discovery:         netConfig.Discovery,
-        StaticNodes:       staticNodes,
-        TrustedNodes:      trustedNodes,
+        Discovery:     netConfig.Discovery,
+        NoDial:       netConfig.NoDial,
+        StaticNodes:   staticNodes,
+        TrustedNodes: trustedNodes,
         // ... other fields ...
     }
     return node, nil
@@ -183,6 +196,14 @@ The default value of `true` for Discovery:
 - Maintains backward compatibility
 - Can be disabled when needed for private networks
 
+### NoDial Configuration
+
+The default value of `false` for NoDial:
+- Allows nodes to actively establish connections
+- Provides flexibility for specialized node roles
+- Can be enabled to create passive nodes that only accept incoming connections
+- Useful for nodes behind firewalls or in specific network configurations
+
 ### Static and Trusted Nodes
 
 Supporting both types of special nodes:
@@ -197,6 +218,7 @@ The implementation:
 - Provides consistent parsing for all node types
 - Maintains backward compatibility
 - Follows existing code patterns
+- Makes all network behavior explicitly configurable
 
 # Reference Implementation
 
@@ -205,4 +227,4 @@ The reference implementation is available in:
 - `node/defaults.go`: Default node configuration
 - `node/node.go`: Node initialization and configuration handling
 
-The changes maintain backward compatibility while adding new functionality in a clean and maintainable way. The reader should analyze the reference code with a high degree of skepticism as it was developed with the help of AI.  Core `go-zenon` developers should not assume the author undersands all the downstream impacts of this proposed change.  
+The changes maintain backward compatibility while adding new functionality in a clean and maintainable way. The reader should analyze the reference code with a high degree of skepticism as it was developed with the help of AI. Core `go-zenon` developers should not assume the author understands all the downstream impacts of this proposed change.
