--- a/DeeZNNutz.com/zip-0001.md
+++ b/DeeZNNutz.com/zip-0001.md
@@ -19,25 +19,20 @@
 
 # Abstract
 
-This ZIP proposes making node discovery, static nodes, trusted nodes, and connection behavior configurable through the node's `config.json` file. The proposal formalizes these configuration options, ensures they are properly utilized throughout the codebase, and introduces explicit default values for all network-related settings.
+This ZIP proposes making node discovery, static nodes, trusted nodes, and connection behavior configurable through the node's `config.json` file. The proposal formalizes these configuration options, ensures they are properly utilized throughout the codebase, and introduces explicit default values for these network-related settings.
 
 # Motivation
 
-The current implementation has several limitations:
+The current `go-zenon` implementation contains certain networking variables with either `nil` or hard coded values which should be configurable through the `config.json` file:
 
-1. Node discovery configuration exists but needs formalization
-2. Static nodes can be configured but need proper documentation
-3. Trusted nodes are supported in the configuration but not fully utilized
-4. Connection behavior settings lack explicit defaults
-5. Users need more clarity about default values and behavior
+1. `Discovery` variable exists but is hard coded to `true` and cannot be changed
+2. `StaticNodes` variable is defined but the list cannot be changed from `config.json`
+3. `TrustedNodes` variable is defined but the list cannot be changed from `config.json`
+4. `Nodial` varaible exists but is hard coded to `false` and cannot be changed
 
 This ZIP aims to solve these issues by:
-- Formalizing all network configuration options
-- Properly implementing trusted nodes support
-- Documenting default values and behaviors
-- Ensuring consistent handling of all node connection types
-- Centralizing default values in the p2p package
-- Adding explicit control over connection behavior
+- Enable configuration of trusted and static nodes in  `config.json` 
+- Allow `Discovery` and `NoDial` values to be changed in `config.json` 
 
 # Specification
 
